# mcp-yfinance-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
finance/: providers.py
finance/tools/: details.py  drivers.py  history.py  metrics.py
src/mcp_yfinance_server/: __init__.py  __main__.py  server.py
src/mcp_yfinance_server/finance/: providers.py  scoring.py  transformers.py
src/mcp_yfinance_server/finance/tools/: details.py  drivers.py  history.py  metrics.py
tests/: test_scoring.py  test_server.py  test_transformers.py
