[project]
name = "mcp-yfinance-server"
version = "0.1.0"
description = "A Model Context Protocol server providing Yahoo Finance data through yfinance"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "shapi88" }]
keywords = ["finance", "mcp", "yfinance", "llm", "yahoo-finance"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
]

[project.scripts]
mcp-yfinance-server = "mcp_yfinance_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_yfinance_server"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
